--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "./src/service/service.js",
   "dependencies": {},
   "devDependencies": {
+    "@types/node": "13.11.1",
     "eslint": "6.8.0",
-    "eslint-config-htmlacademy": "0.5.2"
+    "eslint-config-htmlacademy": "0.5.2",
+    "ts-node": "8.8.2",
+    "typescript": "3.8.3"
   },
   "scripts": {
-    "start": "node ./src/service/service.js",
+    "start": "ts-node ./src/service/service.ts",
     "test": "npm run eslint",
-    "eslint": "eslint --ext .js src/"
+    "eslint": "eslint --ext .ts src/"
   },
   "repository": {
     "type": "git",
