--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Типотека",
   "main": "./src/service/service.js",
-  "dependencies": {},
+  "dependencies": {
+    "chalk": "4.0.0"
+  },
   "devDependencies": {
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2"
