--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "devDependencies": {
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2",
-    "nodemon": "2.0.3"
+    "jest": "26.6.3",
+    "nodemon": "2.0.3",
+    "supertest": "6.0.1"
   },
   "scripts": {
     "start": "node ./src/service/service.js",
     "start.dev": "nodemon ./src/service/service.js",
     "start-front-server": "nodemon ./src/express/index.js",
-    "test": "npm run eslint",
-    "eslint": "eslint --ext .js src/"
+    "eslint": "eslint --ext .js src/",
+    "test": "jest --watchAll",
+    "test::eslint": "npm run eslint"
   },
   "repository": {
     "type": "git",
