--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./src/service/service.js",
     "start.dev": "cross-env NODE_ENV=development nodemon ./src/service/service.js",
+    "start.dev::debug": "cross-env NODE_ENV=development LOG_LEVEL=debug nodemon ./src/service/service.js",
     "start-front-server": "nodemon ./src/express/index.js",
     "eslint": "eslint --ext .js src/",
     "test": "jest --watchAll",
