--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Типотека",
   "main": "./src/service/service.js",
   "dependencies": {
+    "axios": "0.21.1",
     "chalk": "4.0.0",
     "cross-env": "7.0.3",
     "express": "4.17.1",
