--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "chalk": "4.0.0",
     "cross-env": "7.0.3",
     "express": "4.17.1",
+    "multer": "1.4.2",
     "nanoid": "3.1.12",
     "pino": "6.8.0",
     "pug": "3.0.0"
