--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ build/
 
 # Результат программы
 mocks.json
+
+# Директория с загруженными изображениями
+src/express/upload/img/*.*
+!src/express/upload/img/.gitkeep
+ 
