--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ node_modules/
 # Папка с собранными файлами проекта
 build/
 
+# Файл с переменными окружения
+.env
+
 # Результат программы
 mocks.json
 
