--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Типотека",
   "main": "./src/service/service.js",
+  "_moduleAliases": {
+    "root": ".",
+    "~": "src"
+  },
   "dependencies": {
     "axios": "0.21.1",
     "chalk": "4.0.0",
@@ -20,6 +24,7 @@
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2",
     "jest": "26.6.3",
+    "module-alias": "2.2.2",
     "nodemon": "2.0.3",
     "pino-pretty": "4.3.0",
     "supertest": "6.0.1"
