--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cross-env": "7.0.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "joi": "17.4.2",
     "multer": "1.4.2",
     "nanoid": "3.1.12",
     "pg": "8.5.1",
