--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "module-alias": "2.2.2",
     "nodemon": "2.0.3",
     "pino-pretty": "4.3.0",
+    "sqlite3": "5.0.2",
     "supertest": "6.0.1"
   },
   "scripts": {
