--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "0.21.1",
+    "bcrypt": "5.0.1",
     "chalk": "4.0.0",
     "concurrently": "6.3.0",
     "cross-env": "7.0.3",
