--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "bcrypt": "5.0.1",
     "chalk": "4.0.0",
     "concurrently": "6.3.0",
+    "connect-session-sequelize": "7.1.2",
     "cross-env": "7.0.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "express-session": "1.17.2",
     "helmet": "4.6.0",
     "joi": "17.4.2",
     "multer": "1.4.2",
@@ -39,8 +41,8 @@
     "back-server-cli": "cross-env NODE_ENV=development LOG_LEVEL=debug nodemon -r dotenv/config ./src/service/service.js",
     "start-back-server": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js --server",
     "start-back-server::debug": "cross-env NODE_ENV=development LOG_LEVEL=debug nodemon -r dotenv/config ./src/service/service.js --server",
-    "start-front-server": "node ./src/express/index.js",
-    "start-front-server::debug": "nodemon ./src/express/index.js",
+    "start-front-server": "node -r dotenv/config ./src/express/index.js",
+    "start-front-server::debug": "nodemon -r dotenv/config ./src/express/index.js",
     "eslint": "eslint --ext .js src/",
     "jest": "npm run jest",
     "test::rest": "jest --watchAll",
