--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
   },
   "scripts": {
     "start": "npm run start-all-servers",
-    "start-all-servers": "concurrently \"npm run start-back-server::debug\" \"npm run start-front-server::debug\"",
-    "back-server-cli": "cross-env NODE_ENV=development LOG_LEVEL=debug nodemon -r dotenv/config ./src/service/service.js",
-    "start-back-server": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js --server",
+    "start::debug": "npm run start-all-servers::debug",
+    "start-all-servers": "concurrently \"npm run start-back-server\" \"npm run start-front-server\"",
+    "start-all-servers::debug": "concurrently \"npm run start-back-server::debug\" \"npm run start-front-server::debug\"",
+    "back-server-cli": "cross-env NODE_ENV=production LOG_LEVEL=error node -r dotenv/config ./src/service/service.js",
+    "back-server-cli::debug": "cross-env NODE_ENV=development LOG_LEVEL=debug nodemon -r dotenv/config ./src/service/service.js",
+    "start-back-server": "cross-env NODE_ENV=production LOG_LEVEL=error node -r dotenv/config ./src/service/service.js --server",
     "start-back-server::debug": "cross-env NODE_ENV=development LOG_LEVEL=debug nodemon -r dotenv/config ./src/service/service.js --server",
     "start-front-server": "node -r dotenv/config ./src/express/index.js",
     "start-front-server::debug": "nodemon -r dotenv/config ./src/express/index.js",
