--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: nodejs
+    image: "nodejs:12-alpine"
     container_name: nodejs
     restart: unless-stopped
     env_file: .env
@@ -19,6 +19,7 @@ services:
 
   db:
     image: "postgres:12-alpine"
+    container_name: postgres
     ports:
       - "5432:5432"
     environment:
