--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "pg": "8.5.1",
     "pino": "6.8.0",
     "pug": "3.0.0",
-    "sequelize": "6.4.0"
+    "sequelize": "6.4.0",
+    "socket.io": "4.4.1",
+    "socket.io-client": "4.4.1"
   },
   "devDependencies": {
     "eslint": "6.8.0",
