--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chalk": "4.0.0",
     "concurrently": "6.3.0",
     "connect-session-sequelize": "7.1.2",
+    "cors": "2.8.5",
     "cross-env": "7.0.3",
     "csurf": "1.11.0",
     "dotenv": "8.2.0",
