--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "back-server-cli::debug": "cross-env NODE_ENV=development LOG_LEVEL=debug nodemon -r dotenv/config ./src/service/service.js",
     "start-back-server": "cross-env NODE_ENV=production LOG_LEVEL=error node -r dotenv/config ./src/service/service.js --server",
     "start-back-server::debug": "cross-env NODE_ENV=development LOG_LEVEL=debug nodemon -r dotenv/config ./src/service/service.js --server",
-    "start-front-server": "node -r dotenv/config ./src/express/index.js",
-    "start-front-server::debug": "nodemon -r dotenv/config ./src/express/index.js",
+    "start-front-server": "node -r dotenv/config ./src/express/express.js",
+    "start-front-server::debug": "nodemon -r dotenv/config ./src/express/express.js",
     "eslint": "eslint --ext .js src/",
     "jest": "npm run jest",
     "test::rest": "jest --watchAll",
